fix: GET /movies added genres fields
